--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
     
   </section>
 
+  <div id="recuadros-container"></div>
+
   <div id="carrusel">
     <div class="carousel-container">
       <img src="https://media.gq.com.mx/photos/632b39a722c97ee0ad66e56e/1:1/w_2000,h_2000,c_limit/ropa-de-hombre-que-puedes-usar-todo-el-ano.jpg" alt="Imagen 1">
@@ -76,15 +78,16 @@
       <div id="redes-sociales">
         <h4>Síguenos en redes sociales</h4>
         <ul id="social-icons">
-          <li><a href="#"><img src="https://www.facebook.com/images/fb_icon_325x325.png" alt="Facebook"></a></li>
-          <li><a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/58/Instagram-Icon.png/769px-Instagram-Icon.png" alt="Instagram"></a></li>
-          <li><a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6f/Logo_of_Twitter.svg/2491px-Logo_of_Twitter.svg.png" alt="Twitter"></a></li>
+          <li><a href="#"><img src="https://www.facebook.com/images/fb_icon_325x325.png" alt=></a></li>
+          <li><a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/58/Instagram-Icon.png/769px-Instagram-Icon.png" alt=></a></li>
+          <li><a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6f/Logo_of_Twitter.svg/2491px-Logo_of_Twitter.svg.png" alt=></a></li>
         </ul>
       </div>
     </div>
   </footer>
   
   <script src="./js/header.js"></script>
+  <script src="./js/index.js" type="module"></script>
   <script src="./js/filtro.js"></script>
   <script src="./js/carrusel.js"></script>
   <script src="./js/footer.js"></script>
