--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
   <header>
+    <div class="logo">
+      <img src="https://i.pinimg.com/originals/72/85/40/7285401123e4a2d6f5dd29e6fada6a3e.png" alt="Inicio" id="btn-inicio">
+    </div>
     <h1 id="tituloTienda"></h1>
     <div id="headerRight">
       <input type="text" id="buscador" placeholder="Buscar por nombre">
@@ -14,8 +17,12 @@
         <button id="categoriasBtn" class="dropdownBtn">Categorías</button>
         <ul id="categoriasList" class="dropdownContent"></ul>
       </div>
+      <a href="./rebajas.html">
       <button id="rebajasBtn" class="dropdownBtn">Rebajas</button>
-      <ul id="productosList" class="dropdownContent"></ul>
+      </a>
+      <ul id="productosList" class="dropdownContent" ></ul>
+      
+      
     </div>
   </header>
   <section>
