--- a/accesorios.html
+++ b/accesorios.html
@@ -8,46 +8,15 @@
 </head>
 <link rel="stylesheet" href="./css/index.css">
 <body>
-    <header>
-        <div class="logo">
-            <img src="https://i.pinimg.com/originals/72/85/40/7285401123e4a2d6f5dd29e6fada6a3e.png" alt="Inicio" id="btn-inicio">
-          </div>
-        <h1 id="tituloTienda"></h1>
-        <div id="headerRight">
-          <input type="text" id="buscador" placeholder="Buscar por nombre">
-          <div class="dropdown">
-            <button id="categoriasBtn" class="dropdownBtn">Categorías</button>
-            <ul id="categoriasList" class="dropdownContent"></ul>
-          </div>
-          <button id="rebajasBtn" class="dropdownBtn">Rebajas</button>
-          <ul id="productosList" class="dropdownContent"></ul>
-        </div>
-      </header>
 
-<footer>
-    <div id="footerContainer">
-      <div id="info">
-        <h4>Información de la Tienda</h4>
-        <p>Tienda de Ropa para Hombres</p>
-        <p>Dirección: Calle Principal, Ciudad</p>
-        <p>Teléfono: 123-456-789</p>
-      </div>
-      <div id="contacto">
-        <h4>Contacto</h4>
-        <p>Email: info@tiendaropa.com</p>
-        <p>Teléfono: 123-456-789</p>
-      </div>
-      <div id="redes-sociales">
-        <h4>Síguenos en redes sociales</h4>
-        <ul id="social-icons">
-          <li><a href="#"><img src="https://www.facebook.com/images/fb_icon_325x325.png" alt=></a></li>
-          <li><a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/58/Instagram-Icon.png/769px-Instagram-Icon.png" alt=></a></li>
-          <li><a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6f/Logo_of_Twitter.svg/2491px-Logo_of_Twitter.svg.png" alt=></a></li>
-        </ul>
-      </div>
-    </div>
-  </footer>
+  <header id="header1"></header>
+
+  <div id="accesorios-container"></div>
+
+  <footer id="footer1"></footer>
+
 </body>
 <script src="./js/header.js"></script>
+<script src="./js/acceserios.js" type="module"></script>
 <script src="./js/footer.js"></script>
 </html>
