--- a/rebajas.html
+++ b/rebajas.html
@@ -11,6 +11,11 @@
   
   <header id="header1"></header>
 
+  <div class="anuncio">
+    <p>ÚLTIMOS DÍAS: Rebajas en artículos seleccionados</p>
+  </div>
+  
+
   <div id="rebajas-container"></div>
 
   <footer id="footer1"></footer>
